--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet" />
-    <title></title>
+    <title>MyCalculator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="container">
+        
         <header id="top">
             <h1>Calc It Up!</h1>
         </header>
         
-        <section>
-            <p>Math info  </p>
-        </section>
+        <div class="info-container">
+            <section>
+                <h2>Fun Math Fact</h2>
+                <p>Did you know? Zero is the only number that cannot be represented in Roman numerals!</p>
+                <h3>Common Math Formulas</h3>
+                <img src="formulas.png" alt="Common math formulas" class="mathImg">
+                <img src="formulas1.png" alt="Common math formulas" class="mathImg">
+            </section>
+        </div>
 
         <div class="calculator">
             <div class="screen"></div>
